3rdparty/proton-foundation-search-1.1.1/src/index/text/text_with_buckets/write/snapshots/proton_foundation_search__index__text__text_with_buckets__write__tests__defragmentation-2.snap
---
source: packages/search/src/index/text/text_with_buckets/write/tests.rs
expression: dump
---
text index - cached proton_foundation_search::index::text::text_with_buckets::content::Content
{
  "vocabulary": {
    "next": 2,
    "tokens": [
      [
        1,
        "calcidation"
      ]
    ],
    "trigrams": [
      [
        [
          "alc",
          1
        ],
        [
          1
        ]
      ],
      [
        [
          "ati",
          6
        ],
        [
          1
        ]
      ],
      [
        [
          "cal",
          0
        ],
        [
          1
        ]
      ],
      [
        [
          "cid",
          3
        ],
        [
          1
        ]
      ],
      [
        [
          "dat",
          5
        ],
        [
          1
        ]
      ],
      [
        [
          "ida",
          4
        ],
        [
          1
        ]
      ],
      [
        [
          "ion",
          8
        ],
        [
          1
        ]
      ],
      [
        [
          "lci",
          2
        ],
        [
          1
        ]
      ],
      [
        [
          "tio",
          7
        ],
        [
          1
        ]
      ]
    ]
  },
  "occurrences": [
    {
      "entries": [
        [
          1,
          0,
          1
        ]
      ],
      "tokens": [
        1
      ],
      "occurrences": "6FA239E10D335D85A9532C0681E89A98"
    }
  ]
}
token occurrences bucket 0 - cached proton_foundation_search::index::text::text_with_buckets::tokens::Tokens
[
  -1,
  1,
  -2,
  0,
  -3,
  0,
  -4,
  1,
  0
]
