3rdparty/proton-foundation-search-1.1.1/src/index/text/text_with_buckets/write/snapshots/proton_foundation_search__index__text__text_with_buckets__write__tests__defragmentation.snap
---
source: packages/search/src/index/text/text_with_buckets/write/tests.rs
expression: dump
---
token occurrences bucket 0 - cached proton_foundation_search::index::text::text_with_buckets::tokens::Tokens
[
  -1,
  0,
  -2,
  0,
  -3,
  0,
  -4,
  0,
  0,
  -1,
  1,
  -2,
  0,
  -3,
  0,
  -4,
  1,
  0
]
text index - cached proton_foundation_search::index::text::text_with_buckets::content::Content
{
  "vocabulary": {
    "next": 2,
    "tokens": [
      [
        0,
        "defragmentation"
      ],
      [
        1,
        "calcidation"
      ]
    ],
    "trigrams": [
      [
        [
          "agm",
          4
        ],
        [
          0
        ]
      ],
      [
        [
          "alc",
          1
        ],
        [
          1
        ]
      ],
      [
        [
          "ati",
          6
        ],
        [
          1
        ]
      ],
      [
        [
          "ati",
          10
        ],
        [
          0
        ]
      ],
      [
        [
          "cal",
          0
        ],
        [
          1
        ]
      ],
      [
        [
          "cid",
          3
        ],
        [
          1
        ]
      ],
      [
        [
          "dat",
          5
        ],
        [
          1
        ]
      ],
      [
        [
          "def",
          0
        ],
        [
          0
        ]
      ],
      [
        [
          "efr",
          1
        ],
        [
          0
        ]
      ],
      [
        [
          "ent",
          7
        ],
        [
          0
        ]
      ],
      [
        [
          "fra",
          2
        ],
        [
          0
        ]
      ],
      [
        [
          "gme",
          5
        ],
        [
          0
        ]
      ],
      [
        [
          "ida",
          4
        ],
        [
          1
        ]
      ],
      [
        [
          "ion",
          8
        ],
        [
          1
        ]
      ],
      [
        [
          "ion",
          12
        ],
        [
          0
        ]
      ],
      [
        [
          "lci",
          2
        ],
        [
          1
        ]
      ],
      [
        [
          "men",
          6
        ],
        [
          0
        ]
      ],
      [
        [
          "nta",
          8
        ],
        [
          0
        ]
      ],
      [
        [
          "rag",
          3
        ],
        [
          0
        ]
      ],
      [
        [
          "tat",
          9
        ],
        [
          0
        ]
      ],
      [
        [
          "tio",
          7
        ],
        [
          1
        ]
      ],
      [
        [
          "tio",
          11
        ],
        [
          0
        ]
      ]
    ]
  },
  "occurrences": [
    {
      "entries": [
        [
          0,
          0,
          1
        ],
        [
          1,
          0,
          1
        ]
      ],
      "tokens": [
        0,
        1
      ],
      "occurrences": "81D975E5BB445CF1A4EEAD5DAD6A6F34"
    }
  ]
}
